--- a/src/assets/styles/elements.less
+++ b/src/assets/styles/elements.less
@@ -18,11 +18,11 @@ h3 {
 
 // BUTTONS
 .button {
-	height: 40px;
+	height: 25px;
 	border-radius: 8px;
 	padding-left: 20px;
 	padding-right: 20px;
-	font-size: 20px;
+	font-size: 16px;
 	text-transform: lowercase;
 	letter-spacing: 1px;
 	font-family: "Mali", sans-serif;
