--- a/src/styles.less
+++ b/src/styles.less
@@ -26,4 +26,5 @@
 body {
     font-family: 'Mali';
     background-color: @gray-darkest;
+	margin: 0;
 }
